--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
   "bugs": {
     "url": "https://github.com/compute-io/tversky-index/issues"
   },
-  "dependencies": {},
+  "dependencies": {
+    "intersect": "^0.1.0"
+  },
   "devDependencies": {
     "chai": "1.x.x",
     "mocha": "1.x.x",
