[UPDATE] use validators. [TESTS] remove redundant tests.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
     "url": "https://github.com/compute-io/tversky-index/issues"
   },
   "dependencies": {
-    "intersect": "^0.1.0"
+    "intersect": "^0.1.0",
+    "validate.io-array": "^1.0.3",
+    "validate.io-boolean": "^1.0.4",
+    "validate.io-nonnegative": "^1.0.0",
+    "validate.io-object": "^1.0.3",
+    "validate.io-string": "^1.0.2"
   },
   "devDependencies": {
     "chai": "1.x.x",
